--- a/docs/notes/high_performance/GEMM/3-共享内存缓存块.md
+++ b/docs/notes/high_performance/GEMM/3-共享内存缓存块.md
@@ -26,6 +26,12 @@
 
 ![picture 1](images/0f38c9170eab69162740def01d0cd30b432e54c6c3a022a38227ee3630691961.png)
 
+:::info
+
+这里的图与之前的不同是因为以 block 的视角。
+
+:::
+
 以下是代码的重要部分，其中变量名称对应上面的图表：
 
 ```cpp
