--- a/docs/meaningless/语录/others.mdx
+++ b/docs/meaningless/语录/others.mdx
@@ -19,3 +19,33 @@ hide_table_of_contents: false
 > For to every one who has will more be given, and he will have abundance; but from him who has not, even what he has will be taken away.
 
 凡有的，还要加给他，叫他有余。凡没有的，连他所有的，也要夺去。 
+
+## 感情上辜负了一个既深情又很好的女生，以后会遭报应吗?  
+
+
+> 作者：茉莉宝石
+>
+> 链接:  https://www.zhihu.com/question/584647371/answer/2950232277
+
+
+会。但不是辜负她这件事直接造成的。换句话讲，天上并没有神的书记员在监视你、记录你糟糕的一举一动，这一点你大可放心。
+
+但你不会过得好。
+
+你的报应来源于你本身没有识别和抓住好东西的能力。你把别人的爱视为他们弱势的体现，然后你轻视它、浪费它，得意洋洋。可实际上你也并不是天性洒脱。他们走了，你又患得患失。这本质是你恃强凌弱的体现——你有主动权的时候就欺压对方，没有主动权的时候伏低做小。这件事在一个人身上表现过，在下一个人身上还会这样。
+
+或许这么讲你会觉得，那我改就好了。但改只是理性的矫正，不是本质的翻新。人类能做到的是在社会中改变自己的呈现，不能做到的是在亲密关系里长期的扮演。再厉害的演员也没有这个本事。
+
+你的报应就是你的性格。如果要说什么是命运的话，这就是了。
+
+> 作者：宇宙
+>
+> 链接: https://www.zhihu.com/question/584647371/answer/2935387924
+
+不会有报应的啦。
+
+你只需要意识到你错过的是你人生曾经有过的天花板，你能辜负，说明你对美好的东西没有感知力。
+
+而这种天赐机缘，上帝不会给你两次。
+
+好好往前走就行了，不会有报应的，只是你之后的运气会均值回归。
