--- a/docs/deeplearning/Evaluation/Boundary-IoU.mdx
+++ b/docs/deeplearning/Evaluation/Boundary-IoU.mdx
@@ -1,7 +1,7 @@
 ---
 title: Boundary IoU：图像分割新型指标
 authors: [Asthestarsfalll]
-tags: [PaperRead, deep learning, computer vision, change detection]
+tags: [PaperRead, deep learning, computer vision, change detection, evaluation]
 description: 新型图像分割指标，Boundary IoU比标准Mask Iou对大物体的边界误差敏感得多，并且不会对较小对象的误差进行过度惩罚。
 hide_table_of_contents: false
 ---
